[HVHA-12] Update API to better match specs as tested by VC API TEST SUITe
- Execute VC API TEST SUITE and fix API accordingly
- Update documentation
